# MP_Integraciones_Python

./: .env.example  .firebaserc.example  .gitignore  AGENTS.md  README.md  firebase.json  firestore.indexes.json  output.txt  prompt_codex_mp_checkout_firestore.txt  pyproject.toml
app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py
app/firestore/: client.py  collections.py  transactions.py
app/models/: order.py  payment.py  payment_alert.py  webhook_event.py
app/repositories/: __init__.py  alert_repository.py  base.py  order_repository.py  payment_repository.py  webhook_repository.py
app/routers/: checkout.py  health.py  orders.py  payments.py  returns.py  webhooks.py
app/schemas/: checkout.py  order.py  payment.py  webhook.py
app/services/: mercado_pago_service.py  money_service.py  order_service.py  payment_service.py  state_machine.py  webhook_service.py
app/templates/: error.html  payment_result.html
scripts/: run_emulators.sh  test_checkout.sh  test_webhook.sh
static/: checkout.html
tests/: conftest.py  test_checkout.py  test_firestore_transactions.py  test_health.py  test_money.py  test_orders.py  test_payments.py  test_returns.py  test_webhooks.py
